--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <section class="carrossel-container">
           <div class="carrossel">
             <div class="carrossel-track">
-              <img src="img1.jpg" alt="Convite digital de aniversário" />
-              <img src="img2.jpg" alt="Convite digital de casamento" />
-              <img src="img3.jpg" alt="Convite digital de chá" />
-              <img src="img4.jpg" alt="Convite digital de 15 anos" />
-              <img src="img5.jpg" alt="Convite personalizado para evento" />
+              <img src="Img1.jpg" alt="Convite digital de aniversário" />
+              <img src="Img2.jpg" alt="Convite digital de casamento" />
+              <img src="Img3.jpg" alt="Convite digital de chá" />
+              <img src="Img4.jpg" alt="Convite digital de 15 anos" />
+              <img src="Img5.jpg" alt="Convite personalizado para evento" />
             </div>
           </div>
         </section>
@@ -76,7 +76,7 @@
             </p>
           </div>
           <div class="logo-image">
-            <img src="logo.png" alt="Exemplos variados de logotipos criados" />
+            <img src="Logo.png" alt="Exemplos variados de logotipos criados" />
           </div>
         </div>
       </div>
@@ -87,7 +87,7 @@
       <h2 class="google-sans">Nosso design em experiências visuais</h2>
       <div class="blog-cards">
         <div class="blog-card">
-          <img src="img.pen.png" alt="Ícone de caneta representando design exclusivo" class="blog-icon" />
+          <img src="Img.pen.png" alt="Ícone de caneta representando design exclusivo" class="blog-icon" />
           <h3 class="google-sans">Design Exclusivo</h3>
           <p>
             Crie convites únicos e sob medida, desenvolvidos por especialistas. Explore também materiais de marketing criativos para dar vida às suas ideias.
@@ -95,7 +95,7 @@
         </div>
 
         <div class="blog-card">
-          <img src="img.layer.jpg" alt="Ícone de camadas representando templates" class="blog-icon" />
+          <img src="Img.layer.jpg" alt="Ícone de camadas representando templates" class="blog-icon" />
           <h3 class="google-sans">Templates Profissionais</h3>
           <p>
             Comemoração, evento ou divulgação? Nossa vasta coleção de templates personalizáveis permite criar artes incríveis com praticidade.
@@ -103,7 +103,7 @@
         </div>
 
         <div class="blog-card">
-          <img src="img.rocket.jpg" alt="Ícone de foguete representando ação rápida" class="blog-icon" />
+          <img src="Img.rocket.jpg" alt="Ícone de foguete representando ação rápida" class="blog-icon" />
           <h3 class="google-sans">Ação Rápida e Sob Medida</h3>
           <p>
             Descubra recursos exclusivos e fáceis de usar. Customize como preferir ou solicite uma arte sob encomenda com o seu estilo.
@@ -126,7 +126,7 @@
     <section class="contact-section">
       <a href="https://www.instagram.com/midlle.creative?igsh=MWlod216Z2JoYzV0Nw==" target="_blank" class="insta-link" rel="noopener noreferrer">
         <div class="insta-wrapper">
-          <img src="img.insta.png" alt="Ícone do Instagram" class="insta-icon" />
+          <img src="Img.insta.png" alt="Ícone do Instagram" class="insta-icon" />
           <span class="insta-flag">Midlle.Creative</span>
         </div>
       </a>
